# Tic-Tac-Toe

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
include/: common.h
src/: checkDraw.cpp  checkWin.cpp  displayBoard.cpp  main.cpp  placeMarker.cpp  switchPlayer.cpp
